--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/datejs": "0.0.30",
     "bootstrap": "4.1.1",
     "datejs": "^1.0.0-rc3",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
