--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.9",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/forms": "~8.2.9",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@types/datejs": "0.0.30",
     "bootstrap": "4.1.1",
     "datejs": "^1.0.0-rc3",
+    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
